# jupyter-cadquery

./: .gitignore  MANIFEST.in  MIGRATION.md  Makefile  RELEASE.md  environment.yml  flake.nix  pyproject.toml  requirements.txt  validate_nb.py
examples/: 1-cadquery.ipynb  1-cadquery.py  2-cadquery-examples.ipynb  3-occ.ipynb  4-sketches.ipynb  5-build123d.ipynb  5-build123d.py  6-show_object.ipynb  7-show.ipynb  8-show_all.ipynb  9-set-viewer-config.py  9-set_viewer_config.ipynb
examples/assemblies/: 1-disk-arm.ipynb  2-hexapod.ipynb  3-jansen-linkage.ipynb  4-bearing.ipynb  5-door.ipynb  6-nested-assemblies.ipynb
jupyter_cadquery/: __init__.py  app.py  comms.py  replay.py  show.py  tools.py  viewer_registry.py
marimo_cadquery/: __init__.py  app.py  comms.py  replay.py  show.py  tools.py  viewer_registry.py
