[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter_cadquery"
version = "4.0.2"
description = "An extension to render cadquery objects in JupyterLab via pythreejs"
readme = "README.md"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["ipython", "jupyter", "widgets", "CAD", "cadquery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "webcolors~=24.8.0",
    "cad-viewer-widget~=3.0.2",
    "cachetools~=5.5.0",
    "orjson~=3.10.16",
    "ocp_vscode>=3.3.0",
    "marimo",
]

[project.optional-dependencies]
dev = [
    "cookiecutter",
    "twine",
    "bumpversion",
    "black",
    "pylint",
    "pyYaml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "jupyter_cadquery/*.py",
]


# = = = = = = = = = = = = = = 
# bump version
# = = = = = = = = = = = = = = 


[tool.bumpversion]
current_version = "4.0.2"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\d*)(?P<build>\\d*)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
sign_tags = false
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "jupyter_cadquery/_version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = 'jupyter-cadquery=={current_version}'
replace = 'jupyter-cadquery=={new_version}'

[[tool.bumpversion.files]]
filename = "README.md"
search = 'Current version: **v{current_version}**'
replace = 'Current version: **v{new_version}**'

[[tool.bumpversion.files]]
filename = "README.md"
search = 'jupyter_cadquery {current_version} OK'
replace = 'jupyter_cadquery {new_version} OK'

[[tool.bumpversion.files]]
filename = "docker/Dockerfile"
search = 'jupyter-cadquery=={current_version}'
replace = 'jupyter-cadquery=={new_version}'
